# platform.core.uifw.e-mod-tizen-wm-policy

./: AUTHORS  COPYING.Flora  Makefile.am  NOTICE  autogen.sh  configure.ac
packaging/: e-mod-tizen-wm-policy.spec
src/: .e_mod_visibility.c.swp  Makefile.am  e-module-policy-sysinfo.edj  e_mod_atoms.c  e_mod_atoms.h  e_mod_config.c  e_mod_conformant.c  e_mod_conformant.h  e_mod_gesture.c  e_mod_gesture.h  e_mod_indicator.c  e_mod_indicator.h  e_mod_keyboard.c  e_mod_keyboard.h  e_mod_lockscreen.c  e_mod_lockscreen.h  e_mod_main.c  e_mod_main.h  e_mod_notification.c  e_mod_notification.h  e_mod_private_data.h  e_mod_quickpanel.c  e_mod_quickpanel.h  e_mod_region.c  e_mod_region.h  e_mod_rotation.c  e_mod_rotation.h  e_mod_rotation.x  e_mod_rotation_wl.c  e_mod_rotation_wl.h  e_mod_sensord.c  e_mod_sensord.h  e_mod_softkey.c  e_mod_stack.c  e_mod_sysinfo.c  e_mod_sysinfo.h  e_mod_transform_mode.c  e_mod_transform_mode.h  e_mod_transit.c  e_mod_types.c  (+21 more)
src/rotation/: e_mod_rotation.c  e_mod_rotation.h  e_mod_rotation_private.h  e_mod_rotation_settings.c  e_mod_rotation_settings.h  e_mod_rotation_wl.c  e_mod_rotation_wl.h  e_mod_sensord.c  e_mod_sensord.h
src/services/: e_mod_gesture.c  e_mod_gesture.h  e_mod_indicator.c  e_mod_lockscreen.c  e_mod_quickpanel.c  e_mod_quickpanel.h  e_mod_region.c  e_mod_transit.c  e_mod_transit.h  e_mod_volume.c  e_mod_volume.h
